--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ dependencies = [
     "pre-commit>=4.2.0",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
-    "ruff>=0.11.6",
+    "ruff>=0.11.7",
 ]
+
+[tool.ruff]
+line-length = 120
 
 [tool.ruff.format]
 quote-style = "double"
