ruffの設定に命名規則を追加

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ select = [
     "W", # pycodestyle warnings
     "I", # isort
     "D", # pydocstyle
+    "N", # pep8-naming
 ]
 ignore = [
     "D100", # undocumented-public-module
