--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@babel/generator": "^7.27.1",
-    "@babel/parser": "^7.27.2"
+    "@babel/parser": "^7.27.2",
+    "complexity-report": "^2.0.0-alpha"
   }
 }
